--- a/src/public/components/register.component.html
+++ b/src/public/components/register.component.html
@@ -1,9 +1,6 @@
 <div class="row">
-	<div class="col-xs-5">
-		Name:
-	</div>
-	<div class="col-xs-7">
-		<input type="text" placeholder="Name" [(ngModel)]="name" />
+	<div class="col-xs-12">
+		Name: <input type="text" placeholder="Name" [(ngModel)]="name" />
 	</div>
 </div>
 <div class="row">
