--- a/src/public/styles/main.scss
+++ b/src/public/styles/main.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 html {
 	height: 100%;
 }
@@ -5,9 +7,5 @@ html {
 body {
 	height: 100%;
 	margin: 0;
+	background: $gray-95;
 }
-
-.clear {
-	clear: both;
-}
-
