--- a/src/public/components/register.component.html
+++ b/src/public/components/register.component.html
@@ -1,10 +1,10 @@
-<div class="row">
-	<div class="col-xs-12">
-		Name: <input type="text" placeholder="Name" [(ngModel)]="name" />
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-12">
-		<a class="btn btn-success" (click)="register()">Register</a>
+<div class="registration-wrapper">
+	<div class="inputs">
+		<div>
+			<input type="text" placeholder="Name" [(ngModel)]="name" />
+		</div>
+		<div>
+			<a class="btn btn-success" (click)="register()">Register</a>
+		</div>
 	</div>
 </div>
