--- a/src/public/components/chat.component.html
+++ b/src/public/components/chat.component.html
@@ -1,14 +1,8 @@
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-xs-2 user-list">
-			<div *ngIf="user">You are {{user.getName()}}</div>
-			<user-list></user-list>
-		</div>
-		<div class="col-xs-2 conversation-list">
-			<conversation-list (select)="openConversation($event)"></conversation-list>
-		</div>
-		<div class="col-xs-8 chat-messages">
-			<message-list [conversation]="conversation"></message-list>
-		</div>
+<div class="main">
+	<div class="conversation-list">
+		<conversation-list (select)="openConversation($event)"></conversation-list>
+	</div>
+	<div class="chat-messages">
+		<message-list></message-list>
 	</div>
 </div>
