--- a/src/public/components/message-list.component.scss
+++ b/src/public/components/message-list.component.scss
@@ -2,11 +2,9 @@
 
 .conversation {
 	overflow-x: hidden;
-
-	.row {
-		margin-left: 0;
-		margin-right: 0;
-	}
+	list-style: none;
+	padding: 0;
+	margin: 0;
 
 	.col-xs-12 {
 		padding-left: 0;
@@ -22,19 +20,30 @@
 
 	.messages {
 		background: $white;
-		height: calc(100% - 45px - 50px);
+		height: calc(100% - 45px - 58px);
 		overflow-y: auto;
+		list-style: none;
+		padding: 0;
+		margin: 0;
+
+		&::after {
+			clear: both;
+		}
 
 		.message {
-			font-size: 10pt;
+			font-size: 12pt;
+			padding: 0 10px;
+			clear: both;
 
-			.username {
+			.author {
 				color: $gray-30;
 				text-transform: uppercase;
 				margin: 0 5px;
 			}
 
 			&.me {
+				float: right;
+
 				.message-wrapper {
 					.message-contents {
 						background: #28f;
@@ -43,7 +52,12 @@
 				}
 			}
 
+			&.other {
+				float: left;
+			}
+
 			.message-wrapper {
+
 				.usernam-ab {
 					background: $gray-70;
 					color: $black;
@@ -52,8 +66,8 @@
 					background: $gray-90;
 					color: $black;
 					display: inline-block;
-					border-radius: 10px;
-					padding: 8px;
+					border-radius: 19px;
+					padding: 8px 12px;
 					margin: 4px 0;
 				}
 			}
@@ -68,6 +82,7 @@
 			font-size: 11pt;
 			border: 1px solid $gray-85;
 			border-radius: 4px;
+			width: 100%;
 		}
 	}
 }
