--- a/src/public/components/register.component.html
+++ b/src/public/components/register.component.html
@@ -4,7 +4,7 @@
 			<input type="text" placeholder="Name" [(ngModel)]="name" />
 		</div>
 		<div>
-			<a class="btn btn-success" (click)="register()">Register</a>
+			<a class="btn" (click)="register()">Register</a>
 		</div>
 	</div>
 </div>
