--- a/src/public/components/user-list.component.html
+++ b/src/public/components/user-list.component.html
@@ -1,6 +1,10 @@
-<h1>Users</h1>
-<div *ngFor="let user of users" class="col-1-4">
-	<div class="user">
-		<a (click)="startConversation(user)"><h4 [class.online]="user.status" [class.offline]="!user.status">{{user.name}}</h4></a>
-	</div>
+<div class="header">
+	<a class="btn start-btn" (click)="startConversation()">Start Conversation</a>
+	<a class="btn close-btn" (click)="closePanel()">Close</a>
 </div>
+<ul>
+	<li *ngFor="let user of users" class="user" (click)="toggleUserSelected(user)">
+		<i class="fa fa-2x" [class.fa-check-square-o]="isSelected(user)" [class.fa-square-o]="!isSelected(user)" aria-hidden="true"></i>
+		<span [class.online]="user.status" [class.offline]="!user.status">{{user.name}}</span>
+	</li>
+</ul>
