--- a/src/public/styles/variables.scss
+++ b/src/public/styles/variables.scss
@@ -6,3 +6,32 @@ $gray-80: lighten($black, 80); // #d9d9d9
 $gray-70: lighten($black, 70); // #b3b3b3
 $gray-30: lighten($black, 30); // #4d4d4d
 $white: #fff;
+
+$primary: #14a;
+$success: #171;
+$failure: #911;
+
+@mixin primary {
+	background: $primary;
+	color: $white;
+
+	&:hover {
+		background: darken($primary, 5);
+	}
+} 
+@mixin success {
+	background: $success;
+	color: $white;
+
+	&:hover {
+		background: darken($success, 5);
+	}
+} 
+@mixin failure {
+	background: $failure;
+	color: $white;
+
+	&:hover {
+		background: darken($failure, 5);
+	}
+} 
