Adding notifications. Clicking a notification opens the conversation.

--- a/src/public/components/chat.component.html
+++ b/src/public/components/chat.component.html
@@ -1,6 +1,6 @@
 <div class="main">
 	<div class="conversation-list">
-		<conversation-list (select)="openConversation($event)"></conversation-list>
+		<conversation-list></conversation-list>
 	</div>
 	<div class="chat-messages">
 		<message-list></message-list>
